--- a/app.css
+++ b/app.css
@@ -1,4 +1,9 @@
 .recipe{
     border: 1px solid gold;
-    height: 200px;
+    height: 300px;
+}
+
+.thumb{
+    width: 100%;
+    height: 140px;
 }
