--- a/app.css
+++ b/app.css
@@ -1,5 +1,9 @@
+body{
+    font-family: 'Libre Franklin', sans-serif;
+    background-color: #F8ECC9;
+}
+
 .recipe{
-    border: 1px solid gold;
     height: 300px;
 }
 
@@ -18,6 +22,15 @@
     bottom:0;
 }
 
+.btn-default {
+    background-color: #EB9F9F;
+    border: none;
+}
+
+.btn-default:hover{
+    background-color: #F1BBBA;
+}
+
 #share-buttons img {
 width: 35px;
 padding: 5px;
@@ -25,3 +38,29 @@ border: 0;
 box-shadow: 0;
 display: inline;
 }
+
+.title{
+    color: #6B5344;
+}
+
+header, .mainRow{
+    margin-bottom: 15px;
+}
+
+.navbar-collapse.collapse {
+  display: block!important;
+}
+
+.navbar-nav>li, .navbar-nav {
+  float: left !important;
+}
+
+.navbar-nav{
+  margin-right: -15px !important;
+}
+
+@media (max-width: 470px) {
+    .recipe{
+    height: 380px;
+    }
+ }
